update readme and add icons

--- a/code_editor/src/App.css
+++ b/code_editor/src/App.css
@@ -16,8 +16,16 @@ body {
   padding: 0.5rem;
   background-color: hsl(225, 6%, 25%);
 }
+.editor-container.collapsed {
+  flex-grow: 0;
+}
+.editor-container.collapsed .cm-scroller {
+  position: absolute;
+}
+
 .editor-title {
   display: flex;
+  font-size: larger;
   justify-content: space-between;
   background-color: hsl(225, 6%, 13%);
   color: white;
@@ -25,7 +33,7 @@ body {
   border-top-right-radius: 0.5rem;
   border-top-left-radius: 0.5rem;
 }
-.CodeMirror {
+.cm-editor {
   height: 100% !important;
 }
 .code-mirror-wrapper {
@@ -33,4 +41,17 @@ body {
   border-bottom-right-radius: 0.5rem;
   border-bottom-left-radius: 0.5rem;
   overflow: hidden;
+}
+
+.expand-collapse-btn {
+  margin-left: 0.5rem;
+  padding-top: 5px;
+  background: none;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+.expand-collapse-btn:hover {
+  border: 2px solid white;
+  border-radius: 0.5rem;
 }
